--- a/web/encounterRecord/Create.xhtml
+++ b/web/encounterRecord/Create.xhtml
@@ -24,7 +24,7 @@
                     <h:inputText id="round" value="#{encounterRecordController.selected.round}" title="#{bundle.CreateEncounterRecordTitle_round}" />
                 </h:panelGrid>
                 <br />
-                <h:commandLink action="#{encounterRecordController.create}" value="#{bundle.CreateEncounterRecordSaveLink}" />
+                <h:commandButton action="#{encounterRecordController.create}" value="#{bundle.CreateEncounterRecordSaveLink}" />
                 <br />
                 <br />
                 <h:commandLink action="#{encounterRecordController.prepareList}" value="#{bundle.CreateEncounterRecordShowAllLink}" immediate="true"/>
