--- a/web/encounterRecord/Edit.xhtml
+++ b/web/encounterRecord/Edit.xhtml
@@ -56,7 +56,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListEncounterCharacterTitle_comments}"/>
                             </f:facet>
-                            <h:outputText value="#{item.comments}"/>
+                            <h:outputText value="#{item.comments}" rendered="false"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
