--- a/web/encounterRecord/List.xhtml
+++ b/web/encounterRecord/List.xhtml
@@ -7,10 +7,10 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListEncounterRecordTitle}"></h:outputText>
+            <h:outputText value="エンカウンター一覧"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <h:form styleClass="エンカウンター一覧">
+            <h:form styleClass="jsfcrud_list_form">
                 <h:panelGroup id="messagePanel" layout="block">
                     <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                 </h:panelGroup>
