Removed TUN_CHARACTER from EncounterRecord, so that we can delete EncounterRecord entry without error on constraint

--- a/web/encounterRecord/View.xhtml
+++ b/web/encounterRecord/View.xhtml
@@ -89,7 +89,7 @@
                 </h:panelGrid>
 
                 <br/>
-                <h:outputText value="#{encounterRecordController.current.turnCharacter.encounterCharacter.name}"/>                                    
+                <h:outputText value="#{encounterRecordController.turnMember.encounterCharacter.name}"/>                                    
                 <h:panelGrid border="1" cellpadding="2" cellspacing="0">
                     <h:inputTextarea style="font-size: 12px; width: 500px;height: 200px" value="#{encounterRecordController.getTurnCharaComments()}" readonly="true"/>
                 </h:panelGrid>
