Added MonsteMaster and related Tables, Entiries and JSF Pages

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -16,6 +16,42 @@
         <h:form>
             <h:commandLink action="/encounterRecord/List" value="エンカウンター一覧"/>
         </h:form>
-    </h:body>
+                    <h:form>
+                    <h:commandLink action="/abilityMaster/List" value="Show All AbilityMaster Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/diceMaster/List" value="Show All DiceMaster Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/monsterAbilityRecord/List" value="Show All MonsterAbilityRecord Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/monsterMaster/List" value="Show All MonsterMaster Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/monsterSaveRecord/List" value="Show All MonsterSaveRecord Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/monsterSkillRecord/List" value="Show All MonsterSkillRecord Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/monsterSubType/List" value="Show All MonsterSubType Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/saveMaster/List" value="Show All SaveMaster Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/sizeMaster/List" value="Show All SizeMaster Items"/>
+                </h:form>
+</h:body>
+
+
+
+
+
+
+
+
+
 </html>
 
