Added ScenarioCharacterRecord.  And Web page for ScenarioRecord

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -43,7 +43,15 @@
                 <h:form>
                     <h:commandLink action="/sizeMaster/List" value="Show All SizeMaster Items"/>
                 </h:form>
+                <h:form>
+                    <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
+                </h:form>
+                <h:form>
+                    <h:commandLink action="/scenarioRecord/List" value="Show All ScenarioRecord Items"/>
+                </h:form>
 </h:body>
+
+
 
 
 
